# routes/api.php
@@ -14,7 +14,11 @@ use App\Http\Controllers\API\HomeController;
 |
 */
 //
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
+//Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+//    return $request->user();
+//});
+
+
+
+
 
